# mnemon

./: .gitignore  README.md  TODO.md  example.py  examples.py  pyproject.toml
diagrams/: blue-print.drawio  high-level-system-architecture.drawio  memory-ingestion-workflow.drawio  meta-reflection-maintenance-workflow.drawio  system-arch-v0.2.x.drawio  unified-query-workflow.drawio
evermind/: __init__.py  config.py  manager.py  models.py
evermind/indexing/: processor.py
evermind/retrieval/: engine.py
evermind/storage/: protocols.py  qdrant_backend.py
mnemon/: __init__.py
